--- a/TwitterCrawler/pom.xml
+++ b/TwitterCrawler/pom.xml
@@ -27,11 +27,11 @@
          <artifactId>twitter4j-core</artifactId>
          <version>[3.0,)</version>
       </dependency>
-      <dependency>
+      <!--  <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.1-901.jdbc4</version>
-      </dependency>
+      </dependency> -->
       <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
