--- a/TwitterCrawler/pom.xml
+++ b/TwitterCrawler/pom.xml
@@ -1,71 +1,70 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>edu.agh.iisg</groupId>
-  <artifactId>TwitterCrawler</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>TwitterCrawler</name>
-  <description>Crawling Twitter and persisting data in PostgreSQL Database</description>
-  
-  
-  <repositories>
-      <repository>
-         <id>twitter4j.org</id>
-         <name>twitter4j.org Repository</name>
-         <url>http://twitter4j.org/maven2</url>
-         <releases>
-            <enabled>true</enabled>
-         </releases>
-         <snapshots>
-            <enabled>true</enabled>
-         </snapshots>
-      </repository>
-   </repositories>
-   <dependencies>
-   <dependency>
-  		<groupId>pl.edu.agh</groupId>
-  		<artifactId>YtHarvester</artifactId>
-  		<version>1.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-log4j12</artifactId>
-  		<version>1.6.6</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>log4j</groupId>
-  		<artifactId>log4j</artifactId>
-  		<version>1.2.16</version>
-  	</dependency>
-      <dependency>
-         <groupId>org.twitter4j</groupId>
-         <artifactId>twitter4j-core</artifactId>
-         <version>[3.0,)</version>
-      </dependency>
-      <!--  <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.1-901.jdbc4</version>
-      </dependency> -->
-      <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>8.4-702.jdbc4</version>
-      </dependency>
-      <dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>edu.agh.iisg</groupId>
+	<artifactId>TwitterCrawler</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>TwitterCrawler</name>
+	<description>Crawling Twitter and persisting data in PostgreSQL Database</description>
+
+
+	<repositories>
+		<repository>
+			<id>twitter4j.org</id>
+			<name>twitter4j.org Repository</name>
+			<url>http://twitter4j.org/maven2</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	<dependencies>
+		<dependency>
+			<groupId>pl.edu.agh</groupId>
+			<artifactId>YtHarvester</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-core</artifactId>
+			<version>[3.0,)</version>
+		</dependency>
+
+		<!-- <dependency> <groupId>postgresql</groupId> <artifactId>postgresql</artifactId> 
+			<version>9.1-901.jdbc4</version> </dependency> -->
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>8.4-702.jdbc4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>4.1.1.Final</version>
-	  </dependency>
+		</dependency>
 
-      <dependency>
-      	<groupId>org.hibernate.javax.persistence</groupId>
-      	<artifactId>hibernate-jpa-2.0-api</artifactId>
-      	<version>1.0.1.Final</version>
-      </dependency>
-      <dependency>
-      	<groupId>org.hibernate.common</groupId>
-      	<artifactId>hibernate-commons-annotations</artifactId>
-      	<version>4.0.1.Final</version>
-      </dependency>
-   </dependencies>
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.0-api</artifactId>
+			<version>1.0.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.common</groupId>
+			<artifactId>hibernate-commons-annotations</artifactId>
+			<version>4.0.1.Final</version>
+		</dependency>
+	</dependencies>
 </project>
